@@ -3,7 +3,7 @@ Filename    total pass fail deleted inspect
 DB101A.CBL     34   25    0       0       9 OK
 DB102A.CBL     14   14    0       0       0 OK
 DB103M.CBL     14   14    0       0       0 OK
-DB103M.CBL     14   14    0       0       0 OK
+DB103M.CBL     28   28    0       0       0 OK
 DB104A.CBL     12    9    0       0       3 OK
 DB105A.CBL    227  227    0       0       0 OK
 DB201A.CBL     68   56    0       4       8 OK
@@ -17,7 +17,7 @@ DB303M.CBL      1    1    0       0       0 OK
 DB304M.CBL      0    0    0       0       0 OK
 DB305M.CBL      1    1    0       0       0 OK
 --------    ----- ---- ---- ------- -------
-Total         435  404    0       4      27
+Total         449  418    0       4      27
 
 Number of programs:    16
 Successfully executed: 16
