@@ -11,6 +11,6 @@ ST           40       40     0     0    288    0       0       0   288
 SG           13       13     0     0    310    0       0       0   310
 OB            7        7     0     0     39    0       0       0    39
 IF           45       45     0     0    733    0       0       0   733
-DB           16       16     0     0    404    0       4      27   435
+DB           16       16     0     0    418    0       4      27   449
 ------ -------- -------- ----- -----  ----- ---- ------- ------- -----
-Total       420      420     0     0   9556    0      20     118  9694
+Total       420      420     0     0   9570    0      20     118  9708
