@@ -10,6 +10,6 @@ ST           40       40     0     0    288    0       0       0   288
 SG           13       13     0     0    310    0       0       0   310
 OB            7        7     0     0     39    0       0       0    39
 IF           45       45     0     0    733    0       0       0   733
-DBNOIX       16       16     0     0    404    0       4      27   435
+DBNOIX       15       15     0     0    400    0       4      25   429
 ------ -------- -------- ----- -----  ----- ---- ------- ------- -----
-Total       378      378     0     0   9049    0      19     118  9186
+Total       377      377     0     0   9045    0      19     116  9180
