@@ -1,4 +1,9 @@
 
+2017-01-03  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>
+
+	* cobol85/report.pl: replaced fifo by sysin redirection and
+	  new kill sequence
+
 2016-12-18  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>
 
 	* cobol85/report.pl: fixing running the suite from shared file systems by
@@ -13,7 +18,7 @@
 	* cobol85/report.pl, cobol85/*.txt: compile only tests no longer
 	  increment the successful test counter, as this is for runtime tests
 	* cobol85/report.pl: allow passing input to programs (e.g. for those
-	  with STOP literal)
+	  with STOP literal), implemented by mkfifo, asynchron run and kill
 
 2016-12-12  Edward Hart <edward.dan.hart@gmail.com>
 
